# trends

./: .gitignore  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 4fae64437158_init_revision.py
src/: db.py  main.py
src/api/: __init__.py
src/api/dependencies/: articles.py  insights.py
src/api/routers/: articles.py  insights.py
src/core/: config.py  llm_client.py  reddit_client.py
src/models/: __init__.py  article.py  request.py
src/schemas/: insight.py
src/scrappers/: __init__.py  reddit.py  twitter.py
src/services/: analyzer.py
src/srcappers/: reddit.py  twitter.py
