[project]
name = "trends"
version = "0.1.0"
description = ""
authors = [
    {name = "Dvodnenko",email = "thekovalskii@gmail.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "pydantic (>=2.11.9,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "praw (>=7.8.1,<8.0.0)",
    "tweepy (>=4.16.0,<5.0.0)",
    "fastapi (>=0.118.1,<0.119.0)",
    "uvicorn (>=0.37.0,<0.38.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "alembic (>=1.16.5,<2.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "google-genai (>=1.44.0,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
